--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -55,9 +55,9 @@
           主催者情報
         </div>
         <div class="card-body">
-          <div class="d-flex align-items-center gap-3 mb-3">
+          <div class="d-flex align-items-center gap-3 mb-3">    
             <%= image_tag @event.user.decorate.avatar, class: 'rounded-circle avatar-lg' %>
-            <%= @event.user.name %>
+            <%= link_to @event.user.name, user_path(@event.user.id) %> 
           </div>
           <div class="p-3 bg-light">
             イベント数
@@ -112,7 +112,7 @@
         </div>
         <div class="card-body">
            <ul class="list-unstyled">
-             <%= render partial: 'events/attendee', collection: @event.attendees %>
+             <%= render partial: 'events/attendee', attendees: @event.attendees %>
            </ul>
         </div>
       </div>
