--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
         </div>
         <div>
         
-        <% unless @user == current_user %>
+        <% unless current_user.user_login?(@user) %>
           <% if current_user.following?(@user) %>
             <%= link_to "フォローを外す", user_relationships_path(@user.id), method: :delete %>
           <% else %>
